--- a/index.html
+++ b/index.html
@@ -8,43 +8,36 @@
   </head>
 
   <body>
-    <h1>Calculator</h1>
     <main>
       <section class="calculator-container">
-        <div class="calculator-display">
-          <input
-            type="text"
-            id="calculator-screen"
-            readonly
-            aria-live="polite"
-            aria-label="Display"
-          />
+        <div id="title">
+          <img src="./assets/images/texas-instruments-logo.svg" alt="" />
         </div>
-        <div class="calculator-buttons">
-          <button class="calculator-button" id="btnC">C</button>
-          <button class="calculator-button" id="btnBackspace">←</button>
-          <button class="calculator-button" id="btnMultiply">×</button>
-          <button class="calculator-button" id="btnDivide">÷</button>
-
-          <button class="calculator-button" id="btn7">7</button>
-          <button class="calculator-button" id="btn8">8</button>
-          <button class="calculator-button" id="btn9">9</button>
-          <button class="calculator-button" id="btnMinus">-</button>
-
-          <button class="calculator-button" id="btn4">4</button>
-          <button class="calculator-button" id="btn5">5</button>
-          <button class="calculator-button" id="btn6">6</button>
-          <button class="calculator-button" id="btnPlus">+</button>
-
-          <button class="calculator-button" id="btn1">1</button>
-          <button class="calculator-button" id="btn2">2</button>
-          <button class="calculator-button" id="btn3">3</button>
-          <button class="calculator-button" id="buttonEqual">=</button>
-
-          <button class="calculator-button" id="btn0">0</button>
-          <button class="calculator-button" id="btnDot">.</button>
-          <button class="calculator-button" id="buttonEqual">=</button>
+        <div id="calculator-screen" class="calculator-display">
+          <input type="text" readonly aria-live="polite" aria-label="Display" />
         </div>
+        <button class="calculator-button" id="btnC">C</button>
+        <button class="calculator-button" id="btnBackspace">←</button>
+        <button class="calculator-button" id="btnMultiply">×</button>
+        <button class="calculator-button" id="btnDivide">÷</button>
+
+        <button class="calculator-button" id="btn7">7</button>
+        <button class="calculator-button" id="btn8">8</button>
+        <button class="calculator-button" id="btn9">9</button>
+        <button class="calculator-button" id="btnMinus">-</button>
+
+        <button class="calculator-button" id="btn4">4</button>
+        <button class="calculator-button" id="btn5">5</button>
+        <button class="calculator-button" id="btn6">6</button>
+        <button class="calculator-button" id="btnPlus">+</button>
+
+        <button class="calculator-button" id="btn1">1</button>
+        <button class="calculator-button" id="btn2">2</button>
+        <button class="calculator-button" id="btn3">3</button>
+        <button class="calculator-button" id="buttonEqual">=</button>
+
+        <button class="calculator-button" id="btn0">0</button>
+        <button class="calculator-button" id="btnDot">.</button>
       </section>
     </main>
     <script src="./dist/index.js"></script>
